stylesheets/main.css
body {
	/*font-family: 'Baskerville', Georgia, Times, serif;*/
	font-family: "Gill Sans", "Gill Sans MT", "Gill Sans MS", Helvetica, Sans-Serif;
	font-size: 20px;
	line-height: 30px;
}
body div#wrapper {
	background-color: #d8d8d8;
	width: 700px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	behavior: url(/stylesheets/PIE.htc);
	margin: 0px auto;
	padding-bottom: 25px;
	display: block;
}
body > div#wrapper > header {
	height: 140px;
	margin-bottom: 5px;
	display: block;
}
body > div#wrapper > header a {
	text-decoration: none;
	color: black;
}
section#content {
	width: 650px;
	margin: 0px auto;
	display: block;
	background-color: white;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	box-shadow: inset 0 0 8px black;
	-moz-box-shadow: inset 0 0 8px black;
	-webkit-box-shadow: inset 0 0 8px black;
	behavior: url(/stylesheets/PIE.htc);
	padding-top: 20px;
}
p.divider {
	font-family: 'Georgia', Georgia, Times, serif;
	color: #e6e6e6;
	font-size: 32pt;
	text-align: center;
}
nav {
	position: absolute;
	display: block;
	margin: 105px auto 0px 120px;
	float: left;
	background-color: white;
	padding-left: 2em;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	behavior: url(/stylesheets/PIE.htc);
}
nav ul {
	margin: 0;
	padding: 0;
	text-align: center;
}
nav li {
	display: inline;
	padding-right: 2em;
}
section#bottomNav {
	padding: 0px 0px 25px 25px;
	display: block;
}
img#logo {
	float: left;
	margin-left: 120px;
}
img { border-width: 0px; }
p#logotype {
	position: absolute;
	margin-top: 35px;
	margin-left: 290px;
	font-size: 44pt;
	text-decoration: none;
	display: block;
}
a {
	color: #b83000;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
h1 {
	font-size: 20pt;
	font-weight: bold;
}
h2 { font-size: 16pt; }
h1 a {
  color: black;
  text-decoration: none;
}
a:hover { text-decoration: underline; }
h1, h2, h3, h4 {
	display: inline;
	margin: 0;
	font-weight: 600;
}
code { font-family: 'Anonymous Pro', 'Bitstream Vera Sans', 'Monaco', Courier, mono; }
pre { padding: 20px; }
blockquote { font-style: italic; }
section.content > blockquote {
	margin: 0px;
	padding: 0px;
	font-style: normal;
}
footer {
	text-align: left;
	font-style: italic;
	font-size: 18px;
	color: #888;
}
.centerImage {
	text-align:center;
	margin: 0px;
	padding:0px;
}

